aws-asg/asg-template.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters: 

  myVPC:
    Type: String
  mySubnet1:
    #Description: 
    Type: String
  mySubnet2:
    #Description: 
    Type: String
  #mySecGroup1:
    #Description: 
    #Type: String
  myInstanceType:
    #Description: Instance Type
    Type: String
    Default: 't3.medium'
  KeyPairName:
    ConstraintDescription: Must be an existing EC2 Keypair.
    #Description: x
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: 'dev-key'
  myAPPport:
    #Description: 
    Type: String
    Default: '3000'
  AMIimageID:
    #Description: 
    Type: String
  testHostSubnet:
    Type: String
    Default: '0.0.0.0/0'
  AppBucket:
    Description:
      The S3 bucket containing app
    Type: String
    Default: pasha-test1

Resources:
  myLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties: 
      LaunchTemplateName: !Sub ${AWS::StackName}-launch-template
      LaunchTemplateData: 
        BlockDeviceMappings: 
          - Ebs:
              VolumeSize: 8
              VolumeType: gp3
              DeleteOnTermination: true
              #Encrypted: true
            DeviceName: /dev/xvdcz
        ImageId: !Ref AMIimageID
        InstanceType: !Ref myInstanceType
        KeyName: !Ref KeyPairName
        Monitoring: 
          Enabled: true
        SecurityGroupIds: 
          #- !Ref mySecGroup1
          - !Ref WebServerSecurityGroup
        IamInstanceProfile:
            Name:  !Ref myInstanceProfile
        UserData: !Base64 
          'Fn::Sub': |-
            #!/bin/bash -xe
            # setup test app
            yum update -y
            yum install htop -y

            # amazon-linux-extras install nginx1
            # service nginx start

            yum install -y httpd
            amazon-linux-extras install -y php7.3

            service httpd start  
            echo "<html><body><h1>ASGworks!</h1></body></html>" > /var/www/html/test.html

            # get timing: https://github.com/simonebrunozzi-zz/simplewebpage2/blob/master/cpu-stress-test.php
            echo '<!DOCTYPE html><html><body><?php echo "This machine is: "; echo gethostname(); ?><?php for($i = 0; $i < 9999; $i++) {$a += $i;}?><?php echo $a;?></body></html>'  > /var/www/html/test.php

            cd /tmp/

            # curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
            # . ~/.nvm/nvm.sh
            # nvm install 16.13.1

            curl -o /tmp/node-v16.13.1-linux-x64.tar.xz https://nodejs.org/dist/v16.13.1/node-v16.13.1-linux-x64.tar.xz
            mkdir -p /usr/local/lib/nodejs
            tar -xJvf /tmp/node-v16.13.1-linux-x64.tar.xz -C /usr/local/lib/nodejs
            echo 'export PATH=/usr/local/lib/nodejs/node-v16.13.1-linux-x64/bin:$PATH' > /etc/profile.d/node.sh

            # aws s3 cp s3://${AppBucket}/app.zip .
            curl -L -o app.zip https://github.com/taro-ball/GemCity/raw/master/other/app7690e01.zip
            unzip app.zip
            cd app
            PORT=3000 /usr/local/lib/nodejs/node-v16.13.1-linux-x64/bin/node server.js
            #npm start
            

  myASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      TargetGroupARNs:
        - !Ref myALBTargetGroup
        - !Ref myALBTargetGroup2
      AutoScalingGroupName: !Sub "${AWS::StackName}-myASG"
      MinSize: "1"
      MaxSize: "6"
      DesiredCapacity: "1"
      HealthCheckGracePeriod: 300
      LaunchTemplate:
        LaunchTemplateId: !Ref myLaunchTemplate
        Version: !GetAtt myLaunchTemplate.LatestVersionNumber
      VPCZoneIdentifier:
        - !Ref mySubnet1
        - !Ref mySubnet2
      MetricsCollection: 
        - Granularity: "1Minute"
      Tags:
        - Key: Purpose
          Value: WebServerGroup
          PropagateAtLaunch: "false"
        - Key: Name
          Value: !Sub "${AWS::StackName}-instance"
          PropagateAtLaunch: "true"

  AppServerSP:
    # scale up when the average CPU usage of the group reaches 75% 
    Type: 'AWS::AutoScaling::ScalingPolicy' 
    Properties:
        AutoScalingGroupName: !Ref myASG
        EstimatedInstanceWarmup: 60
        PolicyType: TargetTrackingScaling
        TargetTrackingConfiguration:
            PredefinedMetricSpecification:
                PredefinedMetricType: ASGAverageCPUUtilization 
            TargetValue: 75

  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP access via port 80
      VpcId: !Ref myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: !Ref myAPPport
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 80
          ToPort: !Ref myAPPport
          CidrIp: !Ref testHostSubnet

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Load Balancer Security Group
      VpcId: !Ref myVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: !Ref myAPPport
        CidrIp: !Ref testHostSubnet
        #SourceSecurityGroupId: !Ref ProxySecurityGroup 

  myALBLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: !Sub '${AWS::StackName}-alb'
      Scheme: internal
      IpAddressType: ipv4   
      LoadBalancerAttributes: 
        - Key: idle_timeout.timeout_seconds 
          Value: 180   
      Subnets:
        - !Ref mySubnet1
        - !Ref mySubnet2
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Type: application          

  myALBTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    #Condition: CreateTG1
    Properties:
      Name: !Sub '${AWS::StackName}-tg1'
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      HealthCheckPath: "/"
      HealthCheckPort: !Ref myAPPport
      HealthCheckProtocol: HTTP
      Matcher:
        HttpCode: 200-499
      Port:  !Ref myAPPport
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId: !Ref myVPC
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: 'false'
        #- Key: stickiness.type
          #Value: lb_cookie
        #- Key: stickiness.lb_cookie.duration_seconds
          #Value: '30'
  myALBTargetGroup2:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    #Condition: CreateTG1
    Properties:
      Name: !Sub '${AWS::StackName}-tg2'
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      HealthCheckPath: "/"
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      Matcher:
        HttpCode: 200-499
      Port:  80
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      VpcId: !Ref myVPC
      TargetGroupAttributes:
        - Key: stickiness.enabled
          Value: 'false'

  myALBListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    #Condition: CreateTG1
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref myALBTargetGroup
      LoadBalancerArn: !Ref myALBLoadBalancer
      Port: !Ref myAPPport
      Protocol: HTTP
      #Crtificates: 
         #- CertificateArn:

  myALBListener2:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    #Condition: CreateTG1
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref myALBTargetGroup2
      LoadBalancerArn: !Ref myALBLoadBalancer
      Port: 88
      Protocol: HTTP
      #Crtificates: 
         #- CertificateArn:

  myInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties: 
      InstanceProfileName: !Sub '${AWS::StackName}-ec2-instance-profile'
      Path: /
      Roles: 
       - !Ref myInstanceRole

  myInstanceRole: 
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
                - ssm.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMDirectoryServiceAccess
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore 
      Policies:
        - PolicyName: !Sub ${AWS::StackName}-InlinePolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              -
                Effect: Allow
                Action: 
                  - s3:Get*
                  - s3:List*
                Resource: 
                 - !Sub 'arn:aws:s3:::${AppBucket}'
                 - !Sub 'arn:aws:s3:::${AppBucket}/*'
